[gd_scene load_steps=5 format=3 uid="uid://c5wvmf1ycej0u"]

[ext_resource type="Script" path="res://src/stages/games_list/games_list.gd" id="1_f7mjy"]
[ext_resource type="PackedScene" uid="uid://c3yt0tybymylk" path="res://src/network/network_client/network_client.tscn" id="2_1ad20"]
[ext_resource type="PackedScene" uid="uid://cw4jcbx6s5qi7" path="res://src/network/controllers/games_controller.tscn" id="3_46gay"]
[ext_resource type="PackedScene" uid="uid://dl4p6r0wd81bi" path="res://src/components/loader/loader.tscn" id="4_4px7a"]

[node name="GamesList" type="Node2D"]
script = ExtResource("1_f7mjy")

[node name="NetworkClient" parent="." instance=ExtResource("2_1ad20")]

[node name="GamesController" parent="." instance=ExtResource("3_46gay")]

[node name="Loader" parent="." instance=ExtResource("4_4px7a")]
position = Vector2(125, 182)
